Change whole ui and implemented json server module

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,7 +2,7 @@
   <div class="menu">
     {{#link-to 'index'}}
       <h1>
-        <em>SuperRentals</em>
+        <em>Niyuj Employee</em>
       </h1>
     {{/link-to}}
     <div class="links">
@@ -13,6 +13,7 @@
         Contact
       {{/link-to}}
     </div>
+    <div class="right niyuj-logo-small"></div>
   </div>
   <div class="body">
     {{outlet}}
