--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,18 +1,14 @@
 <div class="jumbo">
-  <div class="right tomster"></div>
-  <h2>Contact Us</h2>
-  <p>Super Rentals Representatives would love to help you<br>choose a destination or answer
+  <h3>Contact Us</h3>
+  <p>Niyuj employee Representatives would love to help you<br>choose a destination or answer
     any questions you may have.</p>
   <p>
-    Super Rentals HQ
+    Niyuj employee HQ
     <address>
-      1212 Test Address Avenue<br>
-      Testington, OR 97233
+      3rd Floor Lalit Estate, Baner<br>
+      Pune, OR 97233
     </address>
-    <a href="tel:503.555.1212">+1 (503) 555-1212</a><br>
-    <a href="mailto:superrentalsrep@emberjs.com">superrentalsrep@emberjs.com</a>
+    <a href="tel:20.4078.9067">+91-20-4078-9067</a><br>
+    <a href="https://niyuj.com/">https://niyuj.com/</a>
   </p>
-  {{#link-to 'about' class="button"}}
-    About
-  {{/link-to}}
 </div>
