--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,12 +1,8 @@
 <div class="jumbo">
-  <div class="right tomster"></div>
-  <h2>About Super Rentals</h2>
+  <h3>About Niyuj employee</h3>
   <p>
-    The Super Rentals website is a delightful project created to explore Ember.
-    By building a property rental site, we can simultaneously imagine traveling
+    The Niyuj employee website is a delightful project created to explore Ember.
+    By building a company employee site, we can simultaneously imagine traveling
     AND building Ember applications.
   </p>
-  {{#link-to 'contact' class="button"}}
-    Contact Us
-  {{/link-to}}
 </div>
