--- a/app/templates/components/user-listing.hbs
+++ b/app/templates/components/user-listing.hbs
@@ -6,19 +6,19 @@
         <img src="{{user.image}}" alt="">
     </div>
     <div class="detail">
-        <span>{{user.name}}</span>
+        <span title="{{user.name}}">{{user.name}}</span>
     </div>
     <div class="detail">
-        <span>{{user.status}}</span>
+        <span title="{{user.status}}">{{user.status}}</span>
     </div>
     <div class="detail avatar">
-        <span>{{user.age}}</span>
+        <span title="{{user.age}}">{{user.age}}</span>
     </div>
     <div class="detail">
-        <span>{{user.city}}</span>
+        <span title="{{user.city}}">{{user.city}}</span>
     </div>
     <div class="detail">
-        <span>{{user.email}}</span>
+        <span title="{{user.email}}">{{user.email}}</span>
     </div>
     </article>
 </div>
@@ -36,7 +36,7 @@
             <span>Age:</span> {{user.age}}
         </div>
         <div class="detail">
-            <span>status:</span> {{user.status}}
+            <span>Status:</span> {{user.status}}
         </div>
         <div class="detail">
             <span>Location:</span> {{user.city}}
