--- a/app/templates/users.hbs
+++ b/app/templates/users.hbs
@@ -1,6 +1,6 @@
 <div class="jumbo">
   {{!-- <div class="right niyuj-logo"></div> --}}
-  <button class="right button" {{action "toggleModal" this model}}>Add User</button>
+  <button class="right button" {{action "toggleModal" this}}>Add User</button>
   <h3>Welcome!</h3>
   <p>We hope you find exactly what you're looking for in a place to stay.</p>
 </div>
@@ -37,83 +37,57 @@
 {{#if isShowingModal}}
   <div class="create-user">
     <div class="create-layout">
-              <h3>Create new profile</h3> {{log model.user}}
-              <div class="h-33">
-                  <div class="input-lable">Name:</div>
-                  <div class="emp-input">{{input class="ao-input" type="text" value=model.user.name placeholder="Name" size="30" maxlength="101"}}</div>
-              </div>
-              <div class="h-33">
-                    <div class="input-lable">Age:</div>
-                    <div class="emp-input">
-                        {{input type="text" value=model.user.age placeholder="Age" size="30" maxlength="101"}}
-                    </div>
-              </div>
-              <div class="h-33">
-                    <div class="input-lable">Marital Status:</div>
-                    <div class="emp-input">
-                        {{input type="text" value=model.user.status placeholder="Status" size="30" maxlength="101"}}
-                    </div>
-              </div>
-              <div class="h-33">
-                    <div class="input-lable">Location:</div>
-                    <div class="emp-input">
-                        {{input type="text" value=model.user.city placeholder="Location" size="30" maxlength="101"}}
-                    </div>
-              </div>
-              <div class="h-33">
-                    <div class="input-lable">Email:</div>
-                    <div class="emp-input">
-                        {{input type="text" value=model.user.email placeholder="Email" size="30" maxlength="101"}}
-                    </div>
-              </div>
-              <div class="h-33">
-                    <div class="input-lable">Street:</div>
-                    <div class="emp-input">
-                        {{input type="text" value=model.user.street placeholder="Street" size="30" maxlength="101"}}
-                    </div>
-              </div>
-              <div class="h-33">
-                    <div class="input-lable">Pin Code:</div>
-                    <div class="emp-input">
-                        {{input type="text" value=model.user.pin-code placeholder="Pin Code" size="30" maxlength="101"}}
-                    </div>
-              </div>
-              <div class="h-33">
-                    <div class="input-lable">City:</div>
-                    <div class="emp-input">
-                        {{input type="text" value=model.user.city placeholder="City" size="30" maxlength="101"}}
-                    </div>
-              </div>
-              <div class="h-33">
-                    <div class="input-lable">Country:</div>
-                    <div class="emp-input">
-                        {{input type="text" value=model.user.country placeholder="Country" size="30" maxlength="101"}}
-                    </div>
-              </div>
-              <br><br>
-              <div class="close-btn">
-                <button class="button" onclick={{action (mut isShowingModal) false}}>Close</button>
-                <button class="button" onclick={{action  (route-action 'saveUser' this model.user)}}>Save</button>
-              </div>
-          </div>
-  </div>
-{{/if}}
-
-
-{{#each user.address as |address|}}
-   <div class="listing">
-       <h3>{{address.type}}</h3>
-         <div class="detail">
-            <span>Street:</span> {{address.street}}
-        </div>
-        <div class="detail">
-            <span>Zip Code:</span> {{address.pin-code}}
-        </div>
-        <div class="detail">
-            <span>City:</span> {{address.city}}
-        </div>
-        <div class="detail">
-            <span>Country:</span> {{address.country}}
+        <div class="text-center">
+            <h4>Create new profile</h4>
+            </div>
+            <div class="input-lable">Name:</div>
+            <div class="emp-input">{{input class="ao-input" type="text" value=model.user.name placeholder="Name" size="30" maxlength="101"}}</div>
+            <div class="input-lable">Age:</div>
+            <div class="emp-input">
+                {{input type="text" value=model.user.age placeholder="Age" size="30" maxlength="101"}}
+            </div>
+            <div class="input-lable">Marital Status:</div>
+            <div class="emp-input">
+                {{input type="text" value=model.user.status placeholder="Status" size="30" maxlength="101"}}
+            </div>
+            <div class="input-lable">Location:</div>
+            <div class="emp-input">
+                {{input type="text" value=model.user.city placeholder="Location" size="30" maxlength="101"}}
+            </div>
+            <div class="input-lable">Email:</div>
+            <div class="emp-input">
+                {{input type="text" value=model.user.email placeholder="Email" size="30" maxlength="101"}}
+            </div>
+            <h4>Current Address</h4>
+            <div class="input-lable">Street:</div>
+            <div class="emp-input">
+                {{input type="text" value=model.user.street placeholder="Street" size="30" maxlength="101"}}
+            </div>
+            <div class="input-lable">Pin Code:</div>
+            <div class="emp-input">
+                {{input type="text" value=model.user.pin-code placeholder="Pin Code" size="30" maxlength="101"}}
+            </div>
+            <div class="input-lable">Country:</div>
+            <div class="emp-input">
+                {{input type="text" value=model.user.country placeholder="Country" size="30" maxlength="101"}}
+            </div>
+            <h4>Permanant Address</h4>
+            <div class="input-lable">Street:</div>
+            <div class="emp-input">
+                {{input type="text" value=model.user.street placeholder="Street" size="30" maxlength="101"}}
+            </div>
+            <div class="input-lable">Pin Code:</div>
+            <div class="emp-input">
+                {{input type="text" value=model.user.pin-code placeholder="Pin Code" size="30" maxlength="101"}}
+            </div>
+            <div class="input-lable">Country:</div>
+            <div class="emp-input">
+                {{input type="text" value=model.user.country placeholder="Country" size="30" maxlength="101"}}
+            </div>
+        <div class="p-t-10 text-center">
+        <button class="button" onclick={{action (mut isShowingModal) false}}>Close</button>
+        <button class="button" onclick={{action  (route-action 'saveUser' this model.user)}}>Save</button>
         </div>
     </div>
-{{/each}}
+  </div>
+{{/if}}
